<resources>
    <string name="app_name">Project Inventory App</string>
    <string name="action_settings">Settings</string>
    <string name="insert_dummy_data">Insert Dummy Data</string>
    <string name="delete_all_inventory">Delete All Inventory</string>

    <!--Strings for the list item-->
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="sale">Sale</string>

    <!--Strings for the empty view text-->
    <string name="empty_view_title_text">It\'s a bit lonely in here</string>
    <string name="empty_view_subtitle_text">Start by adding a product!</string>

    <!--Strings for editor activity titles-->
    <string name="editor_activity_add_product">Add product</string>
    <string name="editor_activity_edit_product">Edit product</string>
    <string name="editor_insert_product_failed">Failed to insert product</string>
    <string name="editor_insert_product_successful">Successfully inserted product</string>
    <string name="minimum_order">Minimum order to create product is 10</string>
    <string name="order_product">I would like to order some</string>
    <string name="take_photo">Photo</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="amount">Amount</string>
    <string name="zero">0</string>

    <!--Strings for editor activity-->
    <string name="category_overview">Overview</string>
    <string name="hint_price">Price</string>
    <string name="category_order">Order from supplier</string>
    <string name="edit_name">Product Name</string>
    <string name="overview_quantity">Quantity: </string>
    <string name="order_button_text">Order</string>
    <string name="order_initial_quantity">Enter initial quantity on hand</string>
    <string name="order_direct">Send email to order direct:</string>
    <string name="delete_product">Delete Product</string>
    <string name="delete_dialog_msg">Delete product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_product_failed">Delete product FAILED</string>
    <string name="delete_product_successful">Delete product SUCCESSFUL</string>

    <!--Strings for the order spinner-->
    <string name="order_10">10</string>
    <string name="order_20">20</string>
    <string name="order_30">30</string>
    <string name="order_40">40</string>

    <!--Strings for menu editor-->
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

</resources>
