<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EditorActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/take_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_photo"
        android:layout_gravity="center_horizontal"/>

    <!--Overview category-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_overview"
            style="@style/CategoryStyle" />

        <!-- Input fields and text views -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/edit_name"/>

            <!--Price edit text view-->
            <EditText
                android:id="@+id/edit_price"
                android:hint="@string/hint_price"
                android:inputType="numberDecimal"
                style="@style/EditorFieldStyle"
                android:layout_width="120dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/quantity_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/overview_quantity"/>

                <TextView
                    android:id="@+id/quantity_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!--Minus button to subtract (1) from quantity-->
                <Button
                    android:id="@+id/minus_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minus"/>

                <Button
                    android:id="@+id/plus_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plus"/>

            </LinearLayout>

            <TextView
                android:id="@+id/initital_amount_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_initial_quantity"/>

            <EditText
                android:id="@+id/add_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/amount"
                android:inputType="number"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Order category & Delete -->
    <LinearLayout
        android:id="@+id/container_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_order"
            style="@style/CategoryStyle" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/order_direct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_direct"/>

            <!--Order button-->
            <Button
                android:id="@+id/order_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_button_text"/>

            <Button
                android:id="@+id/delete_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_product"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>